Smart Tv Day1 - background stuff

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <ami-fullstack-root>ok</ami-fullstack-root>
-  <h1> This is it</h1>
+  <ami-fullstack-root></ami-fullstack-root>
 </body>
 </html>
