view enhancements and various fixes

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
   <title>Mafia The Game</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet" type="text/css" href="styles.scss"> -->
+    
 </head>
 <body>
   <ami-fullstack-root></ami-fullstack-root>
